[workspace]
resolver = "3"
members = [
  "carbon-core",
  "carbon-jito-protos",
  "carbon-jito-shredstream-grpc-datasource",
  "carbon-yellowstone-grpc-datasource"
]

[workspace.dependencies]
async-trait = "=0.1.89"
bincode = "=1.3.3"
bs58 = "=0.5.1"
carbon-core = { path = "carbon-core", version = "*" }
carbon-jito-protos = { path = "carbon-jito-protos", version = "*" }
carbon-jito-shredstream-grpc-datasource = { path = "carbon-jito-shredstream-grpc-datasource", version = "*" }
carbon-yellowstone-grpc-datasource = { path = "carbon-yellowstone-grpc-datasource", version = "*" }
futures = "=0.3.31"
log = "=0.4.28"
prost = "=0.14.1"
prost-types = "=0.14.1"
protobuf-src = "=1.1.0"
scc = "=3.4.2"
serde = "=1.0.228"
serde_json = "=1.0.145"
solana-client = "^3"
solana-entry = { version = "^3", features = ["agave-unstable-api"] }
solana-sdk = "^3"
solana-system-interface = "^3"
solana-transaction-context = "^3"
solana-transaction-status = "^3"
thiserror = "=2.0.17"
tokio = { version = "=1.48.0", features = ["full"] }
tokio-util = "=0.7.17"
tonic = "=0.14.2"
tonic-prost = "=0.14.2"
tonic-prost-build = "=0.14.2"
uuid = { version = "=1.18.1", features = ["v4"] }
yellowstone-grpc-client = "^10"
yellowstone-grpc-proto = "^10"
