[workspace]
resolver = "3"
members = [
  "carbon-core",
  "carbon-jito-protos",
  "carbon-jito-shredstream-grpc-datasource",
  "carbon-rpc-block-subscribe-datasource",
  "carbon-yellowstone-grpc-datasource"
]

[workspace.dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
bs58 = "0.5.1"
carbon-core = { path = "carbon-core", version = "*" }
carbon-jito-protos = { path = "carbon-jito-protos", version = "*" }
carbon-jito-shredstream-grpc-datasource = { path = "carbon-jito-shredstream-grpc-datasource", version = "*" }
carbon-rpc-block-subscribe-datasource = { path = "carbon-rpc-block-subscribe-datasource", version = "*" }
carbon-yellowstone-grpc-datasource = { path = "carbon-yellowstone-grpc-datasource", version = "*" }
futures = "0.3.31"
log = "0.4.29"
prost = "0.14.1"
prost-types = "0.14.1"
protobuf-src = "1.1.0"
scc = "3.4.6"
serde = "1.0.228"
serde_json = "1.0.145"
solana-account = "3.2.0"
solana-address = "2.0.0"
solana-entry = { version = "3.1.4", features = ["agave-unstable-api"] }
solana-hash = "4.0.1"
solana-instruction = { version = "3.1.0", features = ["serde"] }
solana-message = "3.0.1"
solana-pubsub-client = "3.1.4"
solana-rpc-client = "3.1.4"
solana-rpc-client-types = "3.1.4"
solana-sdk-ids = "3.1.0"
solana-signature = "3.1.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0.2"
solana-transaction-context = "3.1.4"
solana-transaction-status-client-types = { version = "3.1.4", features = [
  "agave-unstable-api"
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "signal", "sync"] }
tokio-util = "0.7.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
uuid = { version = "1.19.0", features = ["v4"] }
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"
