[package]
name = "carbon-jito-shredstream-grpc-datasource"
version = "0.12.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bincode.workspace = true
carbon-core.workspace = true
carbon-jito-protos.workspace = true
futures.workspace = true
log.workspace = true
scc.workspace = true
solana-address.workspace = true
solana-entry.workspace = true
solana-message.workspace = true
solana-rpc-client.workspace = true
solana-sdk-ids.workspace = true
solana-transaction-status-client-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
